# scale

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .golangci.yaml  .markdownlint.yaml  .parcelrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  build.rs  config.go  config.rs  config.ts  function.go  function.ts  go.mod  go.sum  index.ts  instance.go  instance.ts  jest.config.json  module.go  module.ts  next.go  package-lock.json  package.json  pool.go  pool.ts  scale.go  scale.rs  scale.ts  scale_test.go  temp.txt  template.go  template.ts  tracing.go  (+5 more)
.github/: dependabot.yml
.github/workflows/: build-jsbuilder.yml  golang-tests.yml  jsbuilder-release.yml  lint.yml  npm.yml  release-binaries-macos.yml  release-binaries.yml  release.yml  test.yml  typescript-release.yml  typescript-tests.yml  typescript_compiler.yml
.trunk/: .gitignore  actions  logs  notifications  out  trunk.yaml
.trunk/plugins/: trunk
adapters/fasthttp/: fasthttp.go  request.go  response.go
adapters/fiber/: fiber.go
adapters/http/: deserialize.go  http.go  request.go  response.go  responsewriter.go  serialize.go
cli/analytics/: analytics.go
cli/client/: scale_api_v1_client.go
cli/cmd/: cmd.go  main.go
cli/templates/: templates.go
cli/version/: version.go
client/: index.ts  scale_api_v1_client.go
client/access/: delete_access_apikey_nameorid_parameters.go  get_access_apikey_name_parameters.go  get_access_apikey_name_responses.go  get_access_apikey_nameorid_responses.go  get_access_apikey_parameters.go  get_access_apikey_responses.go  post_access_apikey_name_responses.go  post_access_apikey_parameters.go  post_access_apikey_responses.go
client/cloud/: cloud_client.go  delete_cloud_deployment_identifier_parameters.go  get_domain_parameters.go  (+14 more)
compile/: compile.go  go.mod  go.mod.templ  go.mod.tmpl  go.sum  main.go
compile/typescript/builder/: Cargo.toml  Cross.toml  Makefile  build.rs  builder.go  builder.rs  builder_arm-linux.go  builder_arm-macos.go  builder_arm-windows.go  builder_other.go  builder_x86_64-linux.go  builder_x86_64-macos.go  builder_x86_64-windows.go  generate.go  main.rs  options.rs
compile/typescript/builder/interpreter/: Cargo.toml  build.rs  helpers.rs  main.rs  time.rs
compile/typescript/builder/quickjs-wasm-sys/: .cargo_vcs_info.json  Cargo.toml
compile/typescript/builder/quickjs-wasm-sys/extensions/: value.c
compile/typescript/builder/quickjs-wasm-sys/quickjs/: quickjs.c  quickjs.h
compile/typescript/builder/quickjs-wasm-sys/src/extensions/: value.rs
context/: context.go  context_tinygo.go  host.go  host_tinygo.go  request.go  request_tinygo.go  response.go  response_tinygo.go
docs/: api.json  api.yaml  introduction.mdx  mint.json
examples/: README.md
extension/: extension.go  extension_test.go  function.go  info.go  interface.go  schema.go  schema_test.go
go/: function.go  go.mod  host.go  instance.go  module.go  next.go  pool.go  runtime.go  runtime_test.go
integration/: generate.go  generate_ext_test.go  generate_test.go  integration.ext.test.ts  integration.test.ts  integration_ext_test.go  integration_test.go  typescript.scale
integration/rust_ext_tests/function/: Cargo.toml  lib.rs
java/: pom.xml
log/: index.ts  log.go  log.ts
registry/: index.test.ts  index.ts  registry.go  registry_test.go
runtime/: context.go  function.go  host.go  instance.go  module.go  next.go  reset.go  run.go  runtime.go
rust/: Cargo.toml
rust-guest/: .gitignore  Cargo.toml
rust/compile/: compile.go
rust/compile/templates/: Cargo.toml.templ  lib.rs.templ
rust/src/: lib.rs
rust/src/compile/: scale.rs
rust/src/context/: context.rs  request.rs
rust/tests/: lib.rs
rust/tests/modules/bad_signature/: bad_signature.rs
rust/tests/modules/file/: file.rs
rust/tests/modules/http_handler/: http_handler.rs
rust/tests/modules/http_next/: http_next.rs
rust/tests/modules/http_passthrough/: http_passthrough.rs
rust/tests/modules/modify/: modify.rs
rust/tests/modules/modifynext/: modifynext.rs
rust/tests/modules/network/: network.rs
rust/tests/modules/next/: next.rs
rust/tests/modules/panic/: panic.rs
rust/tests/modules/passthrough/: passthrough.rs
rust/tests/signature/bad-signature/: Cargo.toml  bad_signature.rs  context.rs  guest.rs  lib.rs
rust/tests/signature/example-signature/: Cargo.toml  context.rs  example_signature.rs  guest.rs  lib.rs
scalefile/: scalefile.go
scalefunc/: index.ts  scaleFunc.test.ts  scalefunc.go  scalefunc.ts  scalefunc_test.go
signature/: bool.go  bytes.go  definition.go  enum.go  mod.rs  model.go  numbers.go  schema.go  signature.go  signature_test.go  string.go  utils.go
storage/: build.go  extension.go  function.go  index.ts  signature.go  storage.go
tests/: cleanup.sh  compile.sh  compile_test.go  fasthttp_test.go  fiber_test.go  http_test.go  main_test.go  runtime_test.go
ts/: .parcelrc  README.md  cache.ts  func.ts  index.ts  instance.ts  module.ts  package-lock.json  package.json  pool.ts  runtime.test.ts  runtime.ts  scalemod.ts  tsconfig.json  wasi.ts
ts/compile/builder/crates/cli/: Cargo.toml  build.rs
ts/compile/builder/crates/cli/src/: main.rs  opt.rs  options.rs
ts/compile/builder/crates/core/: Cargo.toml
ts/compile/builder/crates/core/src/: main.rs
ts/compile/builder/crates/core/src/utils/: utils.rs
utils/: utils.go
version/: version.go
(+773 files in other folders)
