[package]
name = "scale_rs"
version = "0.3.20"
edition = "2021"
description = "A High-Performance WebAssembly Function Runtime"
homepage = "https://scale.sh"
repository = "https://github.com/loopholelabs/scale"
license = "Apache-2.0"
exclude = [
    "**/*.go",
    "**/*.ts",
    "**/*.js",
    "**/*.templ",
    "go.mod",
    "go.sum",
    "*.ts",
    "*.js",
    "*.json"
]

[lib]
path = "scale.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.4"
scale_signature_interfaces = "0.1.7"
quickjs-wasm-sys = "1.1.0"
once_cell = "1.4.0"
polyglot_rs = "1.1.2"
flate2 = "1.0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["wizer_opt"] # Use wizer optimization by default
wizer_opt = [] # Enable wizer optimization
embedded_source = [] # Embed the javascript source at compile time
runtime_source = [] # Require a javascript source at runtime
