[package]
name = "js_interpreter"
version = "0.1.0"
edition = "2021"
description = "A JS Interpreter for interpreting JS Scale Functions"
homepage = "https://scale.sh"
repository = "https://github.com/loopholelabs/scale"
license = "Apache-2.0"

[[bin]]
name = "js_interpreter"
path = "main.rs"

[dependencies]
scale_signature_interfaces = "0.1.7"
quickjs-wasm-sys = "1.1.0"
once_cell = "1.4.0"
polyglot_rs = "1.1.2"
anyhow = "1.0.75"
flate2 = { version = "1.0.25", optional = true}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["wizer_opt"] # Use wizer optimization by default
wizer_opt = [] # Enable wizer optimization
embedded_source = ["dep:flate2"] # Embed the javascript source at compile time
runtime_source = ["dep:flate2"] # Require a javascript source at runtime
