[package]
name = "jsbuilder"
version = "0.0.1"
build = "build.rs"

[[bin]]
name = "jsbuilder"

[dependencies]
wizer = "1.6.0"	
# { git = "https://github.com/bytecodealliance/wizer", branch = "main" }
which = "4.2"
structopt = "0.3"
anyhow = "1.0"
tempfile = "3.2.0"
binaryen = "0.12.0"

[dev-dependencies]
wasmtime = "0.35.3"
wasmtime-wasi = "0.35.3"
wasi-common = "0.35.3"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
